testdata/baselines/reference/compiler/exportsInFunctionParam.errors.txt
/dep.js(1,20): error TS7006: Parameter 'exports' implicitly has an 'any' type.


==== /dep.js (1 errors) ====
    function something(exports) {
                       ~~~~~~~
!!! error TS7006: Parameter 'exports' implicitly has an 'any' type.
        exports.foo = 8;
    }
    
    export const foo = 7;
    
==== /main.ts (0 errors) ====
    import { foo } from "./dep.js";
    
    export const bar = foo + 1;
    